--- a/vhosts/dwes.conf
+++ b/vhosts/dwes.conf
@@ -15,6 +15,7 @@
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
 
     # Reescribir la URL
-    RewriteRule ^.*$ dwes.com.com/rest/rest_repetido/index.php [QSA,L]
+    # RewriteRule ^.*$ dwes.com.com/rest/rest_repetido/index.php [QSA,L] 
+    RewriteRule ^.*$ index.php [QSA,L]
 </VirtualHost>
 
